data-collector-webservice/deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-collector
  labels:
    app.kubernetes.io/name: data-collector-webservice
