data-collector-webservice/deploy/k8s/40-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-collector-webservice
  namespace: data-collector
  labels:
    app.kubernetes.io/name: data-collector-webservice
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: data-collector-webservice
  ports:
    - name: http
      port: 80
      targetPort: http
